Review class 6 and prepare class 7

--- a/eae0310-6-seguridade-social.html
+++ b/eae0310-6-seguridade-social.html
@@ -44,7 +44,7 @@ Hoje em dia, quase todos os Estados oferecem várias formas de seguro social. No
 1. Aposentadoria
 2. Seguro-desemprego
 3. Auxílio-doença, auxílio-acidente e auxílio-reclusão
-4. Benefício a pessoa com deficiência (BPC)
+4. Benefício a pessoa com deficiência (Benefício de Prestação Continuada, BPC)
 5. Salário maternidade
 6. Pensão por morte
 
@@ -114,7 +114,7 @@ Mas a pergunta mais relevante aqui para nós não é por que as pessoas compram 
 
 E a resposta a isso não está na aversão ao risco, mas sim na **assimetria informacional**: consumidores em um mercado de seguro quase sempre têm maior informação sobre os seus riscos que a seguradora
 
-Se há grupos de maior e menor risco, o prêmio atuariamente justo pode ser maior que a disposição a pagar do grupo de menor risco, expulsando eles do mercado
+Há dois tipos de assimetria informacional relevantes no mercado de seguros: **características não observáveis** (seleção adversa) e **ações não observáveis** (risco moral): vamos começar pelo primeiro
 
 ---
 class: middle
@@ -155,18 +155,18 @@ Assim, a diferença do modelo com seleção do tradicional é que a curva de ofe
 
 ---
 class: middle
+
+&lt;img src="figs/eae0310-6-12.png" width="70%" /&gt;
+
+Modelo de oferta e demanda competitiva *com seleção adversa*: a demanda negativamente inclinada exclui do mercado consumidores de baixa disposição a pagar, o que (com seleção adversa) é ineficiente, pois a curva de custo marginal está abaixo da curva de demanda [EF11]
+
+---
+class: middle
 ## Seleção em mercados de seguros
 
 A ineficiência do mercado com seleção vem do fato da curva de MC estar **abaixo** da curva de AC: o consumidor marginal sempre tem um custo menor que os inframarginais
 
 Mas eles também têm uma disposição à pagar menor: produzir ao nível eficiente geraria prejuízo às operadoras &amp;mdash; os indivíduos **de menor risco** são expulsos do mercado, ainda que valorem o seguro mais que seu custo individual: essa é a **seleção adversa**
-
----
-class: middle
-
-&lt;img src="figs/eae0310-6-12.png" width="70%" /&gt;
-
-Modelo de oferta e demanda competitiva *com seleção adversa*: a demanda negativamente inclinada exclui do mercado consumidores de baixa disposição a pagar, o que (com seleção adversa) é ineficiente, pois a curva de custo marginal está abaixo da curva de demanda [EF11]
 
 ---
 class: middle
@@ -326,10 +326,17 @@ Mulheres também têm SSW maior: elas pagam o mesmo mas se aposentam antes (rece
 ---
 class: middle
 
+&lt;img src="figs/eae0310-6-19.png" width="90%" /&gt;
+
+No Brasil, a previdência social não é progressiva: em geral, os benefícios são ainda mais concentrados que a (já extremamente desigual) distribuição de renda &amp;mdash; essa falta de progressividade vem principalmente (mas não só) do Regime Próprio [Sil+20]
+
+
+---
+class: middle
+
 &lt;img src="figs/eae0310-6-7.png" width="80%" /&gt;
 
 **Sustentabilidade:** o Brasil transfere a idosos o mesmo *em proporção do PIB* que países com uma proporção muito maior de idosos na população [IPE20]
-
 
 ---
 class: middle
@@ -454,6 +461,10 @@ lack of) consumption-smoothing". In: _American Economic Review_ 111.3
 Macmillan, 2016.
 
 [IPE20] IPEA. _Políticas sociais: acompanhamento e análise_. 2020.
+
+[Sil+20] F. G. Silveira, L. Passos, E. da Silva, et al. "Impactos
+redistributivos das transferências públicas monetárias e da tributação
+direta: o que revela a POF 2017/18."  (2020).
 &lt;/small&gt;
 
 
