--- a/eae0310-8-intro-taxacao.html
+++ b/eae0310-8-intro-taxacao.html
@@ -4,6 +4,7 @@
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
     <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 19C/FEA2 - pforquesato@usp.br" />
+    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -169,6 +170,14 @@ class: middle
 &lt;img src="figs/eae0310-8-6.png" width="85%" /&gt;
 
 Desigualdade antes e depois de impostos e transferências no Brasil [(SEAE/2017)](https://www.gov.br/fazenda/pt-br/centrais-de-conteudos/publicacoes/boletim-de-avaliacao-de-politicas-publicas/arquivos/2017/efeito_redistributivo_12_2017.pdf)  
+
+
+---
+class: middle
+
+&lt;img src="figs/eae0310-8-20.png" width="85%" /&gt;
+
+[Sil+20]
 
 ---
 class: middle
@@ -451,6 +460,10 @@ Economic Review_ 109.9 (2019), pp. 3031-72.
 
 [Pik18] T. Piketty. _Capital in the twenty-first century_. Harvard
 University Press, 2018.
+
+[Sil+20] F. G. Silveira, L. Passos, E. da Silva, et al. "Impactos
+redistributivos das transferências públicas monetárias e da tributação
+direta: o que revela a POF 2017/18."  (2020).
 &lt;/small&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
