Review class 7 and prepare class 8

--- a/eae0310-10-peso-morto.html
+++ b/eae0310-10-peso-morto.html
@@ -4,6 +4,7 @@
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
     <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 19C/FEA2 - pforquesato@usp.br" />
+    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -274,15 +275,53 @@ No ótimo, o imposto deve manter a taxa marginal de substituição técnica entr
 
 A intuição é que qualquer imposto sobre a produção distorce a produção *e o consumo*, então deve ser pior que um que distorce apenas o consumo
 
+
+---
+class: middle
+## Imposto sobre valor adicionado
+
+Impostos sobre o consumo (*indiretos*) podem ser cobrados sobre vendas, recolhendo uma taxa `\(t\)` (proporcional ou fixa) sobre a venda *do bem final*
+
+Mas nas últimas décadas se tornou muito mais comum o **imposto sobre valor adicionado** (IVA): com *compliance* perfeito e sem isenções, o IVA é equivalente a um imposto sobre vendas &amp;mdash; a sua vantagem vem de dificultar a evasão fiscal
+
+A vantagem do IVA é que cada produtor na cadeia produtiva desconta o imposto pago *upstream*, o que dá incentivo para **third-party reporting**
+
+---
+class: middle
+
+&lt;img src="figs/eae0310-8-1.png" width="85%" /&gt;
+
+Funcionamento de um imposto sobre vendas e um IVA de 20% [GN18] 
+
+---
+class: middle
+## Imposto sobre valor adicionado
+
+O IVA pode ser uma ferramenta poderosa de combater evasão fiscal em transações *business-to-business* (B2B), pois a empresa *downstream* ganha dinheiro reportando a transação ao governo
+
+Mas isso não funciona para a transação para os consumidores! 
+
+Foi para tentar evitar esse "buraco" no IVA que o governo de SP introduziu a Nota Fiscal Paulista (NFP)
+
+[Nar19] encontrou que a NFP aumenta a receita de impostos do ICMS paulista em 9,3%
+
+
 ---
 class:middle
 # Referências
 &lt;small&gt;
+[GN18] F. Gérard and J. Naritomi. "Value Added Tax in developing
+countries: Lessons from recent research". In: _IGC Growth Brief Series_
+15 (2018).
+
 [Gru16] J. Gruber. _Public finance and public policy_. 5th ed.
 Macmillan, 2016.
 
 [Hin99] J. R. Hines. "Three sides of Harberger triangles". In: _Journal
 of Economic Perspectives_ 13.2 (1999), pp. 167-188.
+
+[Nar19] J. Naritomi. "Consumers as tax auditors". In: _American
+Economic Review_ 109.9 (2019), pp. 3031-72.
 
 [OS15] W. E. Oates and R. M. Schwab. "The window tax: A case study in
 excess burden". In: _Journal of Economic Perspectives_ 29.1 (2015), pp.
