--- a/eae0310-12-taxacao-poupanca.html
+++ b/eae0310-12-taxacao-poupanca.html
@@ -79,6 +79,13 @@ E a riqueza é distribuída de forma bastante desigual: os 10% mais ricos têm p
 ---
 class: middle
 
+&lt;img src="figs/eae0310-12-1.jpg" width="70%" /&gt;
+
+O Brasil é um dos 5 países do mundo que os 80% mais pobres têm menos riqueza que o 0,001% mais rico (1/100.000), ou seja, 2.000 pessoas (metade da FEA) têm mais riqueza que 160 milhões de brasileiros juntos
+
+---
+class: middle
+
 &lt;img src="figs/eae0310-12-6.png" width="60%" /&gt;
 
 Nos EUA a desigualde de riqueza é apenas um pouco melhor: os 5% mais ricos detêm 2/3 da riqueza, e o 1% mais rico 40% [(Inequality.org)](https://inequality.org/facts/wealth-inequality/)
