--- a/eae0310-7-assistencia-social.html
+++ b/eae0310-7-assistencia-social.html
@@ -182,7 +182,7 @@ class: middle
 
 Uma possibilidade final é *deixar o trabalho mais atrativo* &amp;mdash; aumentar a renda do trabalho dos indivíduos faz com que eles estejam menos dispostos a deixar de trabalhar pela assistência
 
-O governo pode fazer isso diretamente, transferindo renda para quem trabalha (EITC, nos EUA, ou abono salarial aqui), como um **imposto de renda negativo**
+O governo pode fazer isso diretamente, transferindo renda para quem trabalha (EITC, nos EUA, ou abono salarial aqui), como um **imposto de renda marginal negativo**
 
 Mas subsídios a *bens complementares ao trabalho* (creche, transporte público, etc) também têm o mesmo efeito 
 
