Small changes lecture 7 and finish lecture 8

--- a/eae0310-7-assistencia-social.html
+++ b/eae0310-7-assistencia-social.html
@@ -286,7 +286,7 @@ class: middle
 class: middle
 ## Restrições sobre os pobres
 
-Finalmente, pobreza é extremamente *custosa psicologicamente* e torna tomar boas decisões mais difícil
+A pobreza também é extremamente *custosa psicologicamente* e torna tomar boas decisões mais difícil
 
 [Pesquisas](https://www.youtube.com/watch?v=hd-WWdl8A5s&amp;t=1s) mostram que no semi-árido nordestino as pessoas têm piores capacidades cognitivas quando estão com medo da seca
 
@@ -424,7 +424,7 @@ class: middle
 
 Uma objeção comum a programas de transferência de renda monetária é que serão mal gastos em **bens de tentação**, como álcool e tabaco 
 
-Na verdade, a evidência é que transferências *reduzem* o consumo desses bens em 0.18 s.d. (plausivelmente pela redução de problemas psicológicos)
+Na verdade, uma revisão da literatura encontrou que transferências *reduzem* o consumo desses bens em 0.18 s.d. na média entre estudos (plausivelmente pela redução de problemas psicológicos)
 
 No mundo real, cada domicílio precisa de coisas diferentes: alguns precisam pagar educação, outros comida, outros ainda querem investir no negócio familiar &amp;mdash; dinheiro dá flexibilidade para cada família gastar onde a sua utilidade marginal *particular* é maior
 
