--- a/eae0310-8-intro-taxacao.html
+++ b/eae0310-8-intro-taxacao.html
@@ -95,11 +95,24 @@ Essa frase ambígua gerou duas tradições: o *princípio da capacidade de pagar
 
 ---
 class: middle
-## Princípios da taxação
+## Princípio dos benefícios
 
-Adam Smith defendia que pessoas deveriam contribuir ao governo de acordo com a sua **capacidade de pagar**
+O **princípio dos benefícos** diz que uma taxação é equitativa se ela taxa indivíduos na proporção dos *benefícios recebidos*: com isso, a justiça tributária depende não apenas da arrecadação, mas também dos gastos
 
-benefícios recebidos 
+Segundo esse princípio, é melhor cobrar o financiamento de bens públicos (por exemplo parques) por taxas de uso do local que por impostos em geral &amp;mdash; é a mesma ideia que justifica contribuições direcionadas para certos gastos, como a contribuição para aposentadoria cobrada na folha
+
+Mas o princípio dos benefícios não consegue explicar taxação com motivos redistributivos
+
+
+---
+class: middle
+## Princípio da capacidade de pagar
+
+Já o **princípio da capacidade de pagar** considera que o governo deve arrecadar um valor exógeno, e busca a forma mais justa de fazê-lo
+
+O princípio então requer que pessoas com igual capacidade de pagar paguem o mesmo, e pessoas com maior capacidade de pagar paguem mais: isso gerou os conceitos de equidade *horizontal* e *vertical*
+
+É claro que nesse caso precisamos definir o que é "capacidade de pagar": idealmente, seria alguma medida de renda ou consumo *potencial* dos indivíduos, que levasse em conta a utilidade em geral, incluindo o lazer &amp;mdash; mas no mundo real isso é inviável
 
 ---
 class: middle
@@ -109,7 +122,7 @@ class: middle
 
 A dificuldade, é claro, está em definir *quais são essas dimensões relevantes*: cor de pele, cor de cabelo, altura, sexo, estado civil, renda &amp;mdash; algumas dessas a sociedade julga justo diferenciar políticas públicas a respeito, outras não
 
-Já a **equidade vertical** lida com o tratamento justo de indivíduos desiguais: indivíduos com maior renda devem pagar mais impostos (mas se essa equidade vertical resultaria em taxação proporcional ou progressiva, e quão progressiva, o princípio não é claro)
+Já a **equidade vertical** lida com o tratamento justo de indivíduos desiguais: indivíduos com maior renda devem pagar mais impostos
 
 ---
 class: middle
